Python3.11: Our generic attribute lookup is not yet compatible, disable it
* At a performance hit, this avoids being incorrect for the time being.

* Added a TODO to restore the performance loss later.

--- a/nuitka/code_generation/templates_c/CodeTemplateCallsMethodPositional.c.j2
+++ b/nuitka/code_generation/templates_c/CodeTemplateCallsMethodPositional.c.j2
@@ -40,7 +40,7 @@ PyObject *CALL_METHOD_WITH_ARGS{{args_count}}(PyObject *source, PyObject *attr_n
 
     PyTypeObject *type = Py_TYPE(source);
 
-    if (type->tp_getattro == PyObject_GenericGetAttr) {
+    if (hasTypeGenericGetAttr(type)) {
         // Unfortunately this is required, although of cause rarely necessary.
         if (unlikely(type->tp_dict == NULL)) {
             if (unlikely(PyType_Ready(type) < 0)) {
