--- a/nuitka/tools/specialize/templates_python/AttributeNodeFixed.py.j2
+++ b/nuitka/tools/specialize/templates_python/AttributeNodeFixed.py.j2
@@ -26,6 +26,7 @@
 {% set dict_operation_variation = attribute_shape_variations.get((attribute_name, "tshape_dict")) %}
 {% set dict_operation_node_arg_mapping = attribute_shape_node_arg_mapping.get((attribute_name, "tshape_dict")) %}
 {% set dict_operation_empty = attribute_shape_empty.get((attribute_name, "tshape_dict"), "None") %}
+{% set dict_operation_static = attribute_shape_static.get((attribute_name, "tshape_dict")) %}
 {% else %}
 {% set dict_shape = 0 %}
 {% endif %}
@@ -84,11 +85,18 @@ class ExpressionAttributeLookupFixed{{attribute_name_class}}(ExpressionAttribute
         subnode_expression = self.subnode_expression
 
 {% if dict_shape %}
-{% if dict_operation_version_check %}
-        if {{dict_operation_version_check}} and subnode_expression.hasShapeDictionaryExact():
-{% else %}
-        if subnode_expression.hasShapeDictionaryExact():
+{% if dict_operation_static %}
+        if subnode_expression.isExpressionConstantTypeDictRef():
+            return (
+                ExpressionDictOperation{{attribute_name_class}}Ref(
+                   source_ref=self.source_ref
+                ),
+                "new_expression",
+                "Reference to 'dict.{{attribute_name}}' resolved."
+            )
 {% endif %}
+        if {% if dict_operation_version_check %}{{dict_operation_version_check}} and {% endif %} \
+           subnode_expression.hasShapeDictionaryExact():
             return trace_collection.computedExpressionResult(
                 expression = ExpressionAttributeLookupDict{{attribute_name_class}}(
                    expression=subnode_expression, source_ref=self.source_ref
@@ -182,6 +190,10 @@ from .DictionaryNodes import {{translateNodeClassName("ExpressionDictOperation" 
 {% endif %}
 {% endif %}
 
+{% if dict_operation_static %}
+from .DictionaryNodes import ExpressionDictOperation{{attribute_name_class}}Ref
+{% endif %}
+
 class ExpressionAttributeLookupDict{{attribute_name_class}}(SideEffectsFromChildrenMixin, ExpressionAttributeLookupFixed{{attribute_name_class}}):
     """Attribute '{{attribute_name}}' lookup on a dict value.
 
@@ -200,7 +212,7 @@ class ExpressionAttributeLookupDict{{attribute_name_class}}(SideEffectsFromChild
     "keys", "values", "items",
     "iterkeys", "itervalues", "iteritems",
     "viewkeys", "viewvalues", "viewitems",
-    "get", "has_key") %}
+    "get", "has_key", "fromkeys") %}
         # Might be used to modify the dict.
         trace_collection.removeKnowledge(self.subnode_expression)
 
@@ -227,12 +239,16 @@ class ExpressionAttributeLookupDict{{attribute_name_class}}(SideEffectsFromChild
 {% for count in reversed(dict_operation_variation[1:]) %}
             {{"if" if count == dict_operation_variation[-1] else "elif"}} {{dict_operation_args[count-1]}} {{dict_operation_arg_tests[count-1]}}:
                 return {{translateNodeClassName("ExpressionDictOperation" + attribute_name_class + str(count+1))}}(
-                    dict_arg=dict_arg {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args[:count], starting=False)}}, source_ref=source_ref
+                        {% if not dict_operation_static %} dict_arg=dict_arg {% endif %}
+                        {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args[:count], starting=dict_operation_static)}},
+                        source_ref=source_ref
                 )
 {% endfor %}
             else:
                 return {{translateNodeClassName("ExpressionDictOperation" + attribute_name_class + str(dict_operation_variation[0]+1))}}(
-                    dict_arg=dict_arg {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args[:dict_operation_variation[0]], starting=False)}}, source_ref=source_ref
+                    {% if not dict_operation_static %} dict_arg=dict_arg {% endif %}
+                    {{formatCallArgs(dict_operation_node_arg_mapping, dict_operation_args[:dict_operation_variation[0]], starting=dict_operation_static)}},
+                    source_ref=source_ref
                 )
 
 {% else %}
@@ -257,6 +273,13 @@ class ExpressionAttributeLookupDict{{attribute_name_class}}(SideEffectsFromChild
             empty_special_class={{dict_operation_empty}}
 {% endif %}
         )
+
+{% if dict_operation_static %}
+        result = wrapExpressionWithNodeSideEffects(
+            old_node=dict_arg,
+            new_node=result
+        )
+{% endif %}
 
         return trace_collection.computedExpressionResult(
             expression = result,
